--- a/GUIDELINES.mkd
+++ b/GUIDELINES.mkd
@@ -4,7 +4,7 @@ While writing a post
 - Always try to keep *only* one category per post.
 - Use the date command to generate the date format for the post
 - Use an existing blog post as a template.
-- Always prefer to throw media into content.ffleddling.com and link from there.
+- Always prefer to throw media into content.ffledgling.com and link from there.
 
 After
 =====
