Lots of style changes
* Update css blockquote styling to not be massive and overpowering
* redo indentation for python codeblocks
* Remove python syntax highlighting from some of the ipython blocks
because it was being more distracting than useful due to printed output

--- a/css/style.css?ver=3.9.2
+++ b/css/style.css?ver=3.9.2
@@ -209,10 +209,13 @@ blockquote em, blockquote i, blockquote cite {
 	font-style: normal;
 }
 blockquote p {
+	/*font-size: 38px; */
 	font-family: "Playfair Display", serif;
-	font-size: 38px;
+	font-size: 22px;
 	line-height: 1.3421052631;
-	margin-bottom: 51px;
+	margin-bottom: 34px;
+	padding-left: 34px;
+        border-left: 4px solid #000000;
 }
 blockquote cite,
 .quote-caption {
